Replace all usages of `new URL(...)` in unit tests
Forbid deprecated URL constructors per forbiddenAPIs